@@ -4,6 +4,7 @@ CHANGES.txt - 2007-02-11
 CHANGES IN CUPS V1.3
 
 	- Documentation updates (STR #2131)
+	- Added support for Linux "relro" linker option (STR #1614)
 	- CUPS now validates the number-up option value (STR #1329)
 	- The on-line help now provides better search capabilities
 	  (STR #1701)
